# ex3_software

./: .gitignore  .gitmodules  Cargo.toml  README.md  Session.vim
.github/workflows/: build.yml
cli_ground_station/: Cargo.toml  README.md  operator_input.json
cli_ground_station/src/: main.rs
cli_test_msg/: Cargo.toml  README.md
cli_test_msg/src/: lib.rs  main.rs
common/src/: lib.rs
dashboard/: index.html
dev_tools/: README.md
dev_tools/cli_test_msg/: Cargo.toml
dev_tools/ipc_burst_hardcoded/: Cargo.toml
dev_tools/ipc_dummy_client/: Cargo.toml
dfgm_data/: data
ex3_ground_station/: .gitignore  Cargo.toml  README.md
ex3_ground_station/DFGM/: data
ex3_ground_station/IRIS/: data
ex3_ground_station/cli_command_obc/: Cargo.toml
ex3_ground_station/cli_ground_station/: Cargo.toml
ex3_ground_station/cli_ground_station/src/: bulk.rs  eps.rs  main.rs  shell.rs
ex3_ground_station/dashboard/: Cargo.toml  index.html
ex3_ground_station/gui_ground_station/: Cargo.toml  README.md
ex3_ground_station/server/: Cargo.toml
ex3_ground_station_content/: .gitignore  Cargo.toml
ex3_ground_station_content/cli_command_obc/: .gitignore  README.md
ex3_ground_station_content/ex3_ground_station_dashboard/: Cargo.toml  index.html
ex3_ground_station_content/src/: message.rs
ex3_ground_station_dashboard/: .gitignore  Cargo.toml  index.html
ex3_ground_station_dashboard/src/: lib.rs  main.rs  router.rs
ex3_ground_station_dashboard/src/components/: nav_bar.rs  navbar.rs
ex3_ground_station_dashboard/src/pages/: command_history.rs  command_list.rs  home.rs  home_page.rs  mod.rs  send_command.rs
ex3_obc_fsw/: .gitmodules  Cargo.toml  README.md
ex3_obc_fsw/bulk_msg_dispatcher/: Cargo.toml  README.md
ex3_obc_fsw/bulk_msg_dispatcher/src/: main.rs
ex3_obc_fsw/cmd_dispatcher/: Cargo.toml
ex3_obc_fsw/cmd_dispatcher/examples/: arduino_uart_test.rs  i2c_test.rs  ipc_burst_hardcoded.rs  ipc_dummy_client.rs  ipc_server_dev_tool.rs
ex3_obc_fsw/cmd_dispatcher/src/: main.rs
ex3_obc_fsw/dev_tools/: README.md
ex3_obc_fsw/handlers/adcs_handler/: .gitignore  Cargo.toml  README.md
ex3_obc_fsw/handlers/adcs_handler/src/: main.rs
ex3_obc_fsw/handlers/cmd_handler/: Cargo.toml  README.md
ex3_obc_fsw/handlers/cmd_handler/src/: main.rs
ex3_obc_fsw/handlers/coms_handler/: Cargo.toml  README.md  UHF_HANDLER.md  UHF_HANDLER_README.md
ex3_obc_fsw/handlers/coms_handler/src/: main.rs  uhf_handler.rs
ex3_obc_fsw/handlers/coms_handler/src/uhf_handler/: README.md  mod.rs  test.sh
ex3_obc_fsw/handlers/dfgm_handler/: Cargo.toml  README.md
ex3_obc_fsw/handlers/dfgm_handler/src/: main.rs
ex3_obc_fsw/handlers/dummy_handler/: Cargo.toml  README.md
ex3_obc_fsw/handlers/dummy_handler/src/: main.rs
ex3_obc_fsw/handlers/iris_handler/: .gitignore  Cargo.toml  README.md
ex3_obc_fsw/handlers/iris_handler/src/: main.rs
ex3_obc_fsw/msg_dispatcher/: .gitignore  Makefile  connection.c  connection.h  msg_dispatcher.c
ex3_obc_fsw/msg_dispatcher_deprecated/: Makefile  README.md  connection.h  msg_dispatcher.c
ex3_obc_fsw/response_msg_dispatcher/: Cargo.toml
ex3_obc_fsw/scheduler/: Cargo.toml
ex3_obc_fsw_content/: Cargo.toml
ex3_obc_fsw_content/dev_tools/cli_test_msg/: README.md
ex3_obc_fsw_content/dev_tools/ipc_burst_hardcoded/src/: main.rs
ex3_obc_fsw_content/dev_tools/ipc_dummy_client/: README.md
ex3_obc_fsw_content/dev_tools/ipc_dummy_client/src/: main.rs
ex3_obc_fsw_content/handlers/bulk_msg_handler/src/: main.rs
ex3_obc_fsw_content/handlers/coms_handler/: README.md
ex3_obc_fsw_content/handlers/coms_handler/src/: main.rs
ex3_obc_fsw_content/msg_dispatcher/: dispatcher_dummy_client.c  msg_dispatcher.c
ex3_obc_fsw_content/scheduler/: .gitignore  Cargo.toml  README.md
ex3_obc_fsw_content/scheduler/src/: log.rs
ex3_obc_fsw_content/scripts/: delete_extra_dirs.sh  uplink_command_to_dfgm_handler.sh
ex3_shared_libs/: .gitignore  Cargo.toml  README.md
ex3_shared_libs/bulk_msg_handler/: Cargo.toml
ex3_shared_libs/bulk_msg_slicing/: Cargo.toml
ex3_shared_libs/common/: Cargo.toml  README.md
ex3_shared_libs/interface/: Cargo.toml  README.md
ex3_shared_libs/interfaces/: Cargo.toml
ex3_shared_libs/interfaces/can/: Cargo.toml  README.md
ex3_shared_libs/interfaces/can/src/: lib.rs
ex3_shared_libs/interfaces/i2c/: Cargo.toml  README.md
ex3_shared_libs/interfaces/i2c/src/: lib.rs
ex3_shared_libs/interfaces/ipc/: Cargo.toml  README.md
ex3_shared_libs/interfaces/ipc/src/: lib.rs
ex3_shared_libs/interfaces/ipc_mio/: Cargo.toml
ex3_shared_libs/interfaces/ipc_mio/src/: lib.rs
ex3_shared_libs/interfaces/src/: i2c.rs  ipc.rs  lib.rs  tcp.rs  uart.rs
ex3_shared_libs/interfaces/uart/: Cargo.toml  README.md
ex3_shared_libs/interfaces/uart/src/: lib.rs
ex3_shared_libs/logging/: README.md  log4rs.yml
ex3_shared_libs/message_structure/: Cargo.toml
ex3_shared_libs/tcp_interface/: Cargo.toml
handlers/: README.md
handlers/bulk_msg_handler/: Cargo.toml
handlers/coms_handler/: Cargo.toml  README.md
handlers/dfgm_handler/: Cargo.toml  README.md
handlers/dfgm_handler/src/: main.rs
handlers/handler/: Cargo.toml
handlers/mock_server/: Cargo.toml
ipc_interface/: Cargo.toml
ipc_interface/src/: lib.rs
ipc_testing/ipc_client_test/: Cargo.toml
libs/interfaces/: Cargo.toml  README.md
message_dispatcher/: Cargo.toml
message_structure/: README.md
msg_dispatcher/: .gitignore  Makefile  connection.c  connection.h  msg_dispatcher.c
scheduler/: .gitignore  Cargo.toml  README.md  delete_extra_dirs.sh  log4rs.toml
scheduler/src/: log.rs  (+3 more)
scripts/: DUMMY_uplink_command_msg.sh  IRIS_uplink_command_msg.sh  README.md  clean_logs_and_data.sh  delete_extra_dirs.sh  dfgm_handler_test.sh  downlink_payload_data.sh  test_dummy_handler.sh  test_eps_handler.sh  test_eps_handler_with_sim_peripheral.sh  test_eps_handler_without_peripheral.sh  test_gps_handler.sh  test_shell_handler.sh  uplink_command_msg.sh  uplink_command_to_dfgm_handler.sh
server/: Cargo.toml
shared_libs_content/: README.md
src/: main.rs
tcp_interface/: Cargo.toml
(+111 files in other folders)
