[workspace]

members = [
    "scheduler",
    "handlers/dfgm_handler",
    "handlers/coms_handler",
    "ex3_shared_libs/tcp_interface",
    "ex3_shared_libs/message_structure",
    "ex3_shared_libs/ipc_interface",
    "ex3_shared_libs/common",
    "scheduler",
    "dev_tools/cli_test_msg",
    "dev_tools/ipc_dummy_client",
    "dev_tools/ipc_burst_hardcoded",
]
