[package]
name = "cli_ground_station"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tcp_interface = { path = "../../ex3_shared_libs/tcp_interface" }
common = { path = "../../ex3_shared_libs/common" }
message_structure = { path = "../../ex3_shared_libs/message_structure" }
bulk_msg_slicing = { path = "../../ex3_shared_libs/bulk_msg_slicing" }
serde_json = "1.0.120"
chrono = "0.4.38"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
