[package]
name = "bulk_msg_dispatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
ipc = { path = "../../ex3_shared_libs/interfaces/ipc" }
common = {path = "../../ex3_shared_libs/common"}
bulk_msg_slicing = { path = "../../ex3_shared_libs/bulk_msg_slicing" }
logging = { path = "../../ex3_shared_libs/logging" }
log = "0.4.22"
