[package]
name = "cmd_dispatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
nix = { version = "0.29.0", features = ["socket"] }
interface = { path = "../../ex3_shared_libs/interface" }
common = {path = "../../ex3_shared_libs/common"}
log = "0.4.22"

[dev-dependencies]
nix = { version = "0.29.0", features = ["socket", "poll"] }
interface = { path = "../../ex3_shared_libs/interface" }
common = {path = "../../ex3_shared_libs/common"}

[[example]]
name = "i2c_test"

[[example]]
name = "ipc_dummy_client"

[[example]]
name = "ipc_burst_hardcoded"

[[example]]
name = "arduino_uart_test"
