[package]
name = "interfaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message_structure = { path = "../message_structure" }
nix = "0.29.0"
rand = "0.8.5"
serialport = "4.6.0"
i2cdev = "0.6.1"
