[package]
name = "dfgm_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcp_interface = { path = "../../libs/tcp_interface" }
ipc_interface = { path = "../../libs/ipc_interface" }
common = {path = "../../libs/common"}
nix = "0.26.2"
message_structure = { path = "../../libs/message_structure" }