edition = "2021"

[dependencies]
tcp_interface = { path = "../../../ex3_shared_libs/tcp_interface" }
ipc_interface = { path = "../../../ex3_shared_libs/ipc_interface" }
common = { path = "../../../ex3_shared_libs/common" }
nix = "0.26.2"
message_structure = { path = "../../../ex3_shared_libs/message_structure" }
