[package]
name = "coms_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../../ex3_shared_libs/common" }
ipc = { path = "../../../ex3_shared_libs/interfaces/ipc" }
tcp_interface = { path = "../../../ex3_shared_libs/tcp_interface" }
bulk_msg_slicing = { path = "../../../ex3_shared_libs/bulk_msg_slicing" }
log = "0.4.22"
