[package]
name = "coms_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
message_structure = { path = "../../../ex3_shared_libs/message_structure" }
common = { path = "../../../ex3_shared_libs/common" }
interfaces = { path = "../../../ex3_shared_libs/interfaces" }
bulk_msg_slicing = { path = "../../../ex3_shared_libs/bulk_msg_slicing" }
logging = { path = "../../../ex3_shared_libs/logging" }
log = "0.4.22"
