[package]
name = "dfgm_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcp_interface = { path = "../../../ex3_shared_libs/tcp_interface" }
ipc = { path = "../../../ex3_shared_libs/interfaces/ipc" }
common = {path = "../../../ex3_shared_libs/common"}
nix = "0.26.2"
log = "0.4.22"
