[package]
name = "iris_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
tcp_interface = { path = "../../../ex3_shared_libs/tcp_interface" }
ipc = { path = "../../../ex3_shared_libs/interfaces/ipc" }
common = {path = "../../../ex3_shared_libs/common"}
nix = "0.26.2"
serde_json = "1.0.125"
message_structure = { path = "../../../ex3_shared_libs/message_structure" }
logging = { path = "../../../ex3_shared_libs/logging" }
log = "0.4.22"